# ProteinDiff

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  ProteinDiff.py  README.md  learn_seqs.py  pixi.toml  pyproject.toml  setup.py
.claude/: settings.local.json
.claude/agents/: code-review-critic.md  codebase-explorer.md  test-runner.md  unit-test-writer.md
config/: train.yml
config/setup/: .envs  Dockerfile  ProteinDiff.yml  docker-compose.yml  environment.yml  setup.sh  start.sh
configs/: debug.yaml  eval.yaml  hydra.yaml
configs/data/: default.yaml
configs/logger/: default.yaml
configs/losses/: default.yaml  vae.yaml
configs/model/: default.yaml  simple.yaml
configs/optim/: adam.yaml  default.yaml
configs/profiler/: default.yaml
configs/scheduler/: default.yaml  static.yaml
data/: constants.py
hpc_scripts/: clean_data.sh  train.sh
proteindiff/: __init__.py
proteindiff/eval/: eval_vae.py
proteindiff/model/: ProteinDiff.py  __init__.py  base.py
proteindiff/static/: __init__.py  constants.py  residue_constants.py
proteindiff/tests/: conftest.py
proteindiff/training/: logger.py  losses.py  optim.py  scheduler.py  training_run.py
proteindiff/types/: __init__.py
proteindiff/typing/: __init__.py
proteindiff/utils/: generation_utils.py  struct_utils.py
proteus/: __init__.py
proteus/conf/: data.py  hydra.py  logger.py  losses.py  optim.py  register_configs.py  scheduler.py  training_params.py
tests/: test_get_neighbors.py  test_struct_utils.py
visualization/: compute_voxels.ipynb  compute_voxels.py  compute_voxels_div.py
(+164 files in other folders)
